--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+beautifulsoup4==4.13.4
 blinker==1.9.0
-click==8.1.8
+bs4==0.0.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
 colorama==0.4.6
-Flask==3.1.0
+Flask==3.1.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+requests==2.32.3
+soupsieve==2.7
+typing_extensions==4.13.2
+urllib3==2.4.0
 Werkzeug==3.1.3
